<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <Button
        android:layout_margin="10sp"
        android:id="@+id/btnMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_and_intent_filters"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_margin="10sp"
        android:id="@+id/btnBroadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_receiver"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_margin="10sp"
        android:id="@+id/btnServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_services"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_margin="10sp"
        android:id="@+id/btnViewModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewmodel_config_changes"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_margin="10sp"
        android:id="@+id/btnRetrofit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coroutine_mvvm_retrofit"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_margin="10sp"
        android:id="@+id/btnWorkManager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/work_manager"
        android:textSize="25sp"
        android:textStyle="bold"
        />

</LinearLayout>